Se añade nueva línea

--- a/_posts/0000-01-03-Daniel.md
+++ b/_posts/0000-01-03-Daniel.md
@@ -3,4 +3,6 @@ layout: slide
 title: "Welcome to our third slide!"
 ---
 Aprendiendo Git en una nueva diapositiva
+
+Esta línea va a ser borrada
 Use the left arrow to go back!
